# oop_in_rust

./: Cargo.toml
src/: main.rs  person.rs
